Fixed MAGETWO-9729: Spacing @ bottom of tabs

--- a/app/code/Mage/DesignEditor/view/adminhtml/css/styles.css
+++ b/app/code/Mage/DesignEditor/view/adminhtml/css/styles.css
@@ -813,7 +813,7 @@
 
 .vde-tab-data {
     position: relative;
-    padding: 50px 0;
+    padding: 50px 0 0;
     color: #f2ebde;
 }
 
@@ -1578,7 +1578,6 @@
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     width: 26.26%;
-    min-height: 250px;
 }
 
 .tab-panel form > span.field-row + .fieldset,
